# ainailsprinters

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  analysis_options.yaml  pubspec.yaml
.github/workflows/: build_and_release.yml  test.yml
android/: build.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
assets/i18n/: ar.json  de.json  en.json  es.json  fr.json  id.json  ja.json  ko.json  pt.json  ru.json  th.json  vi.json  zh.json
assets/lottie/: success.json
desktop/: build_dmg.sh  push_to_github.sh
desktop/electron/: entitlements.mac.plist  main.js  package-lock.json  package.json  preload.js
desktop/electron/assets/: icon.icns
desktop/electron/preview/: anygen_service.js  app.js  clipcat_service.js  creatok_service.js  heygen_service.js  index.html
ios/: Podfile
ios/Runner/: Info.plist
lib/: main.dart
lib/core/di/: providers.dart
lib/core/i18n/: app_i18n.dart  language_selector.dart
lib/core/layout/: desktop_app_shell.dart  responsive_layout.dart
lib/core/router/: app_router.dart  app_shell.dart
lib/core/services/: api_config.dart  bluetooth_print_service.dart  camera_service.dart  desktop_service.dart  http_client.dart  image_upload_service.dart  lkbox_service.dart  mcp_protocol_service.dart  nanobanana_service.dart  openclaw_service.dart  simiai_service.dart  translation_service.dart  voice_input_service.dart
lib/core/theme/: app_theme.dart
lib/desktop/: desktop_app.dart
lib/features/admin/domain/models/: admin_models.dart  payment_models.dart
lib/features/admin/domain/services/: admin_providers.dart  payment_api_service.dart  payment_providers.dart  payment_security_service.dart
lib/features/admin/presentation/: admin_shell.dart
lib/features/admin/presentation/pages/: community_page.dart  dealers_page.dart  headquarters_page.dart  payment_hub_page.dart  stores_page.dart  tech_support_page.dart  user_payment_page.dart  users_page.dart
lib/features/admin/presentation/widgets/: admin_common_widgets.dart  payment_integration_widgets.dart
lib/features/alliance/domain/models/: business_metrics.dart
lib/features/alliance/domain/services/: report_service.dart
lib/features/alliance/presentation/pages/: alliance_page.dart  report_page.dart
lib/features/alliance/presentation/widgets/: business_mode_toggle.dart  revenue_chart.dart  roi_progress_card.dart  store_grid.dart  top_designs_ranking.dart
lib/features/ar/presentation/pages/: ar_camera_page.dart  ar_preview_page.dart  ar_preview_page_enhanced.dart
lib/features/auth/domain/models/: user.dart
lib/features/auth/domain/services/: auth_service.dart
lib/features/auth/presentation/pages/: login_page.dart  register_page.dart
macos/: Podfile
macos/Runner/: AppDelegate.swift  Info.plist  MainFlutterWindow.swift
preview/: app.js  index.html  nanobanana_service.js  ollama_service.js  revor_service.js  skill_integration.js
test/unit/: community_service_test.dart  i18n_test.dart  mcp_protocol_test.dart  report_service_test.dart
test/widget/: app_shell_test.dart  theme_test.dart
windows/: CMakeLists.txt
windows/flutter/: generated_plugin_registrant.h
windows/runner/: flutter_window.cpp  flutter_window.h  main.cpp  utils.cpp  utils.h  win32_window.cpp  win32_window.h
(+33 files in other folders)
